Wed Jul 09 15:34:11 BST 2003  Olly Betts <olly@survex.com>

	* bindings/java/,bindings/java/com/muscat/om/,bindings/java/native/:
	  Removed old Java bindings - we'll do them using SWIG instead.

Wed Jul 09 14:51:51 BST 2003  Olly Betts <olly@survex.com>

	* bindings/php4/Makefile.am,bindings/php4/xapian/.cvsignore: More
	  work on the php4 bindings.

Wed Jul 09 03:00:17 BST 2003  Olly Betts <olly@survex.com>

	* bindings/guile/Makefile.am,bindings/python/Makefile.am,
	  bindings/tcl8/Makefile.am: Worked towards getting guile and tcl8
	  bindings up-to-date.
	* bindings/php4/.cvsignore: Ignore the whole xapian subdirectory.

Wed Jul 09 02:37:12 BST 2003  Olly Betts <olly@survex.com>

	* bindings/perl5/: Removed remaining files.

Wed Jul 09 02:30:55 BST 2003  Olly Betts <olly@survex.com>

	* configure.in,bindings/Makefile.am,bindings/php4/Makefile.am:
	  Working towards getting the php4 bindings functional again.

Wed Jul 09 01:27:39 BST 2003  Olly Betts <olly@survex.com>

	* bindings/swig/om_util_php4.i: om_termname -> std::string.

Wed Jul 09 01:25:11 BST 2003  Olly Betts <olly@survex.com>

	* docs/overview.html,include/xapian/base.h,include/xapian/database.h:
	  Improvements to doxygen-generated documentation.

Wed Jul 09 01:23:55 BST 2003  Olly Betts <olly@survex.com>

	* configure.in,docs/todo.xml: Added check for SWIG version (require
	  at least 1.3.14).

Tue Jul  8 20:59:08 2003  James Aylett  <james@tartarus.org>

	* common/utils.h: missing #include <ctype.h>

Tue Jul  8 18:06:23 2003  James Aylett  <james@tartarus.org>

	* bindings/swig/xapian.i: over-enthusiastic automatic
	  conversion of termname to std::string

Tue Jul 08 17:45:16 BST 2003  Olly Betts <olly@survex.com>

	* common/utils.h: Improved mingw implementation of rmdir().

Tue Jul 08 17:43:21 BST 2003  Olly Betts <olly@survex.com>

	* NEWS,PLATFORMS,configure.in: Version 0.7.1.

Sun Jul 06 21:35:08 BST 2003  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc: Minor tweak.
